force-app/main/default/objects/Status_History__c/Status_History__c.object-meta.xml
<CustomObject>
    <description>This object tracks changes in Status on Program Volunteer and Volunteer Assignment.</description>
    <label>Status History</label>
    <nameField>
        <displayFormat>SH{00000000}</displayFormat>
        <label>Status History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>