force-app/main/default/objects/Status_History__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stopped Responding or No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Declined Background/Reference Check</fullName>
            </value>
            <value>
                <fullName>Did Not Complete/Pass Training or Certification</fullName>
            </value>
            <value>
                <fullName>Poor Communication Skills Displayed During Interview</fullName>
            </value>
            <value>
                <fullName>Not Interested Without Compensation</fullName>
            </value>
            <value>
                <fullName>Did Not Meet Age Requirement</fullName>
            </value>
            <value>
                <fullName>No Position Currently Available</fullName>
            </value>
            <value>
                <fullName>Lacked Access to Technology</fullName>
            </value>
            <value>
                <fullName>Skills/Experience Do Not Match Volunteer Role</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>