force-app/main/default/objects/Status_History__c/fields/Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Reason__c</fullName>
    <label>Dismissal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Violation of AARP Volunteer Policies</fullName>
            </value>
            <value>
                <fullName>Violation of Program Volunteer Policies</fullName>
            </value>
            <value>
                <fullName>Engaging Publicly in Partisan Activity</fullName>
            </value>
            <value>
                <fullName>Difference of Opinion on AARP Policies</fullName>
            </value>
            <value>
                <fullName>Inconsistent Timeliness or Attendance</fullName>
            </value>
            <value>
                <fullName>Legal/Unlawful Issues</fullName>
            </value>
            <value>
                <fullName>Unable to Perform Requested Activities</fullName>
            </value>
            <value>
                <fullName>Violation of IRS SoC (Tax-Aide Only)</fullName>
            </value>
            <value>
                <fullName>Not Accepting of Retraining/Redirection</fullName>
            </value>
            <value>
                <fullName>Inactive/Cannot Be Contacted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>