force-app/main/default/objects/Status_History__c/fields/No_Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Match_Reason__c</fullName>
    <label>No Match Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stopped Responding or No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Failed Background/Reference Check</fullName>
            </value>
            <value>
                <fullName>Did Not Complete/Pass Training or Certification</fullName>
            </value>
            <value>
                <fullName>Poor Communication Skills Displayed During Interview</fullName>
            </value>
            <value>
                <fullName>Not Interested without Compensation</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Age Requirement</fullName>
            </value>
            <value>
                <fullName>No Position Currently Available</fullName>
            </value>
            <value>
                <fullName>Lacked Access to Technology</fullName>
            </value>
            <value>
                <fullName>Skills/Experience Do Not Match Volunteer Role</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>