force-app/main/default/objects/Status_History__c/fields/Other_Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Dismissal_Reason__c</fullName>
    <label>Other Dismissal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>