force-app/main/default/objects/Status_History__c/fields/Prior_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status_Duration__c</fullName>
    <description>Duration of prior status.</description>
    <formula>Prior_Status_History__r.Status_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days of prior status.</inlineHelpText>
    <label>Prior Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>