force-app/main/default/objects/Status_History__c/fields/Prior_Status_History__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Status History</label>
    <referenceTo>Status_History__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>