force-app/main/default/objects/Status_History__c/fields/Program_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Volunteer</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>