force-app/main/default/objects/Status_History__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <description>Status duration calculation.</description>
    <formula>IF( Start_Date__c  &gt; TODAY(), 0,
IF( AND(Start_Date__c  &gt; TODAY(),NOT(ISNULL(End_Date__c ))), End_Date__c - Start_Date__c ,
IF( End_Date__c =  Start_Date__c ,1,
IF( AND(ISNULL(End_Date__c ), Start_Date__c = TODAY()),1,
IF( AND(ISNULL(End_Date__c ), Start_Date__c &lt; TODAY()),TODAY() -  Start_Date__c ,  End_Date__c - Start_Date__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days in current status.</inlineHelpText>
    <label>Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>