force-app/main/default/objects/Status_History__c/fields/Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Status_Type__c</fullName>
    <label>Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Volunteer</fullName>
            </value>
            <value>
                <fullName>Volunteer Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>