force-app/main/default/objects/Status_History__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>Name generated from Assignment volunteer or program volunteer record.</description>
    <formula>IF(LEN(Program_Volunteer__c)=0 ,  Volunteer_Assignment__r.Contact__r.Full_Name__c ,   Program_Volunteer__r.Volunteer__r.Full_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of related volunteer.</inlineHelpText>
    <label>Volunteer</label>
    <type>Text</type>
</CustomField>