force-app/main/default/objects/Status_History__c/fields/Volunteer_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Assignment</label>
    <referenceTo>Volunteer_Assignment__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>Status_History</relationshipName>
    <type>Lookup</type>
</CustomField>